# OpenCV-Learning

./: CMakeLists.txt  README.md  Resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  opencvtools.cpp  opencvtools.h
